Updated Paddle Views

--- a/Maintenance dashboard.Client/Views/AcceptancePaddleControl.xaml
+++ b/Maintenance dashboard.Client/Views/AcceptancePaddleControl.xaml
@@ -38,8 +38,8 @@
             <TextBlock Grid.Row="0" Text="Dodano do bazy danych" Foreground="Gray" Margin="10" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Center"/>
             <materialDesign:PackIcon Grid.Row="1" Kind="DatabaseAdd" VerticalAlignment="Center" Width="100" Height="100" HorizontalAlignment="Center"  Margin="5" Foreground="Gray"/>
         </Grid>
-        
-        
+
+
 
         <Grid Margin="15,80,15, 15" >
             <TextBlock Text="PRZYJĘCIE PALETKI" HorizontalAlignment="Center" VerticalAlignment="Top"  
@@ -62,49 +62,64 @@
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
 
-                <ComboBox Width="150"  DataContext="{Binding EmployeeViewModel}" materialDesign:HintAssist.Hint="Pracownicy" HorizontalAlignment="Left" Grid.Column="0" Grid.Row="0" 
-                           Margin="10" SelectedItem="{Binding SelectedEmployee}" ItemsSource="{Binding Path=Employees}">
-                    <ComboBox.ItemTemplate >
-                        <DataTemplate>
-                            <TextBlock>
-                                <TextBlock.Text>
-                                    <MultiBinding StringFormat="{}{0} {1}">
-                                        <Binding Path="FirstName"/>
-                                        <Binding Path="LastName"/>
-                                    </MultiBinding>
-                                </TextBlock.Text>
-                            </TextBlock>
-                        </DataTemplate>
-                    </ComboBox.ItemTemplate>
-                </ComboBox>
+                <WrapPanel Grid.Column="0" Grid.Row="0">
+                    <materialDesign:PackIcon Kind="User" VerticalAlignment="Center" Width="30" Height="30"/>
+                    <ComboBox Width="150"  DataContext="{Binding EmployeeViewModel}" materialDesign:HintAssist.Hint="Pracownicy" 
+                           Margin="10" SelectedItem="{Binding SelectedEmployee}" ItemsSource="{Binding Path=Employees}" materialDesign:HintAssist.HelperText="Przyjmujący pracownik">
+                        <ComboBox.ItemTemplate >
+                            <DataTemplate>
+                                <TextBlock>
+                                    <TextBlock.Text>
+                                        <MultiBinding StringFormat="{}{0} {1}">
+                                            <Binding Path="FirstName"/>
+                                            <Binding Path="LastName"/>
+                                        </MultiBinding>
+                                    </TextBlock.Text>
+                                </TextBlock>
+                            </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                    </ComboBox>
+                </WrapPanel>
 
-                <TextBox  Width="300" materialDesign:HintAssist.Hint="Numer paletki" Grid.Row="1" Grid.Column="0"
+                <WrapPanel Grid.Row="1" Grid.Column="0">
+                    <materialDesign:PackIcon Kind="Barcode" VerticalAlignment="Center" Width="30" Height="30"/>
+                    <TextBox  Width="300" materialDesign:HintAssist.Hint="Numer paletki" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}"  
                              materialDesign:HintAssist.HelperText="Pole musi być wypełnione"
                               Margin="10"/>
+                </WrapPanel>
 
-                <TextBox  Width="300" materialDesign:HintAssist.Hint="Data dodania" IsEnabled="False" Grid.Row="2" Grid.Column="0"
+                <WrapPanel Grid.Row="2" Grid.Column="0">
+                    <materialDesign:PackIcon Kind="CalendarAdd" VerticalAlignment="Center" Width="30" Height="30"/>
+                    <TextBox  Width="300" materialDesign:HintAssist.Hint="Data dodania" IsEnabled="False" 
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                              Text="{Binding Source={x:Static sys:DateTime.Now}, StringFormat='yyyy-MM-dd', Mode=OneWay}" Margin="10"/>
+                </WrapPanel>
 
-                
-                
 
-                <ComboBox materialDesign:HintAssist.Hint="Akcja" MinWidth="72" Grid.Column="0" Grid.Row="3" 
+                <WrapPanel Grid.Column="0" Grid.Row="3">
+                    <materialDesign:PackIcon Kind="LightningBoltOutline" VerticalAlignment="Center" Width="30" Height="30"/>
+                    <ComboBox materialDesign:HintAssist.Hint="Akcja" MinWidth="72" Grid.Column="0" Grid.Row="3" 
                           Margin="10" Width="150" HorizontalAlignment="Left">
-                </ComboBox>
+                    </ComboBox>
+                </WrapPanel>
 
-             
 
                 <DatePicker materialDesign:HintAssist.Hint="Data planowanej naprawy" Margin="10" Style="{StaticResource MaterialDesignOutlinedDatePicker}" 
                             Grid.Row="4" Grid.Column="0" HorizontalAlignment="Left" Width="220" />
 
-                <ComboBox materialDesign:HintAssist.Hint="Zamówienie" MinWidth="72" Grid.Column="1" Grid.Row="5" 
+                <WrapPanel Grid.Column="1" Grid.Row="5">
+                    <materialDesign:PackIcon Kind="ShoppingCartMinus" VerticalAlignment="Center" Width="30" Height="30"/>
+                    <ComboBox materialDesign:HintAssist.Hint="Zamówienie" MinWidth="72" Grid.Column="1" Grid.Row="5" 
                           Margin="10">
-                </ComboBox>
+                    </ComboBox>
+                </WrapPanel>
 
-                <TextBox  Width="300" materialDesign:HintAssist.Hint="Uwagi" Grid.Row="5" Grid.Column="0"
+                <WrapPanel Grid.Row="5" Grid.Column="0">
+                    <materialDesign:PackIcon Kind="NoteTextOutline" VerticalAlignment="Center" Width="30" Height="30"/>
+                    <TextBox  Width="300" materialDesign:HintAssist.Hint="Uwagi" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"/>
+                </WrapPanel>
 
                 <DataGrid DataContext="{Binding }"  ItemsSource="{Binding }" Margin="10" Grid.Column="1" Grid.Row="1" Grid.RowSpan="4" Background="White"/>
 
@@ -113,6 +128,6 @@
 
             </Grid>
         </Grid>
-    
+
     </Grid>
 </UserControl>
