--- a/Maintenance dashboard.Client/Views/AddPaddleControl.xaml
+++ b/Maintenance dashboard.Client/Views/AddPaddleControl.xaml
@@ -46,28 +46,39 @@
 
                 <StackPanel  HorizontalAlignment="Center"  VerticalAlignment="Center">
 
-                    <TextBox  Width="400" materialDesign:HintAssist.Hint="Numer paletki" 
+                    <WrapPanel>
+                        <materialDesign:PackIcon Kind="Barcode" VerticalAlignment="Center" Width="30" Height="30"/>
+                        <TextBox  Width="400" materialDesign:HintAssist.Hint="Numer paletki" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}"  
                              materialDesign:HintAssist.HelperText="Pole musi być wypełnione"
                              Text="{Binding PaddleNumber, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Margin="10"/>
+                    </WrapPanel>
 
-                    <TextBox  materialDesign:HintAssist.Hint="Model" Width="400" IsEnabled="False" 
+                    <WrapPanel>
+                        <materialDesign:PackIcon Kind="Car" VerticalAlignment="Center" Width="30" Height="30"/>
+                        <TextBox  materialDesign:HintAssist.Hint="Model" Width="400" IsEnabled="False" 
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
-                              Text="VW380 T1/T2 Base/High"/>
+                              Text="VW380 T1/T2 Base/High" />
+                    </WrapPanel>
 
-
-                    <TextBox  Width="400" materialDesign:HintAssist.Hint="Data dodania" IsEnabled="False"
+                    <WrapPanel>
+                        <materialDesign:PackIcon Kind="CalendarAdd" VerticalAlignment="Center" Width="30" Height="30"/>
+                        <TextBox  Width="400" materialDesign:HintAssist.Hint="Data dodania" IsEnabled="False"
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                              Text="{Binding Source={x:Static sys:DateTime.Now}, StringFormat='yyyy-MM-dd HH:mm:ss', Mode=OneWay}" Margin="10"/>
+                    </WrapPanel>
 
-                    <TextBox  Width="400" materialDesign:HintAssist.Hint="Uwagi" 
+                    <WrapPanel>
+                        <materialDesign:PackIcon Kind="NoteTextOutline" VerticalAlignment="Center" Width="30" Height="30"/>
+                        <TextBox  Width="400" materialDesign:HintAssist.Hint="Uwagi" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}"  
                              Text="{Binding PaddleComments, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Margin="10"/>
 
+                    </WrapPanel>
                     <Button  x:Name="btnAddPaddle" Height="25"  Background="#FF0069C0"  
                              BorderBrush="#FF0069C0"  Width="100" Content="DODAJ" Margin="10"  Grid.Column="1"
                              Command="{Binding CreatePaddleCommand}" Click="btnAddPaddle_Click"/>
-                    
+
                 </StackPanel>
             </Grid>
         </Grid>
