--- a/Maintenance dashboard.Client/Views/CreateEmployeeControl.xaml
+++ b/Maintenance dashboard.Client/Views/CreateEmployeeControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.AddEmployeeControl"
+﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.CreateEmployeeControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
