--- a/Maintenance dashboard.Client/Views/CreateRegisterToolControl.xaml
+++ b/Maintenance dashboard.Client/Views/CreateRegisterToolControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.CreateRegisterToolControl"
+﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.AddRegisterToolControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -45,15 +45,20 @@
                            FontSize="18"  Foreground="Gray" Margin="18"/>
 
                 <StackPanel  HorizontalAlignment="Center"  VerticalAlignment="Center">
-
-                    <TextBox  Width="400" materialDesign:HintAssist.Hint="Nazwa wyposażenia"  x:Name="test"
+                    <WrapPanel>
+                        <materialDesign:PackIcon Kind="Tools" VerticalAlignment="Center" Width="30" Height="30"/>
+                        <TextBox  Width="300" materialDesign:HintAssist.Hint="Nazwa wyposażenia"  x:Name="test"
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                               materialDesign:HintAssist.HelperText="Pole musi być wypełnione"
                              Text="{Binding ToolName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" Margin="10"/>
+                    </WrapPanel>
 
-                    <TextBox  materialDesign:HintAssist.Hint="Kod UID" Width="400"  
+                    <WrapPanel>
+                        <materialDesign:PackIcon Kind="Code" VerticalAlignment="Center" Width="30" Height="30"/>
+                        <TextBox  materialDesign:HintAssist.Hint="Kod UID" Width="300"  
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
                               Text="{Binding UidCode, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
+                    </WrapPanel>
 
 
                     <Button  x:Name="btnAddRegisterTool" Height="25"  Background="#FF0069C0"  
