--- a/Maintenance dashboard.Client/Views/EditRegisterToolControl.xaml
+++ b/Maintenance dashboard.Client/Views/EditRegisterToolControl.xaml
@@ -22,7 +22,7 @@
                 </Border.Background>
             </Border>
 
-            
+
 
 
             <materialDesign:PackIcon Kind="Tools" VerticalAlignment="Top" Width="80" Height="80" 
@@ -58,24 +58,34 @@
 
                 <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="5" Grid.Column="0" Grid.Row="1">
 
-                    <TextBox x:Name="txtID" Width="400"  IsEnabled="False"  materialDesign:HintAssist.Hint="Id" 
+                    <WrapPanel>
+                        <materialDesign:PackIcon Kind="Identifier" VerticalAlignment="Center" Width="30" Height="30"/>
+                        <TextBox x:Name="txtID" Width="250"  IsEnabled="False"  materialDesign:HintAssist.Hint="Id" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
                              Text="{Binding SelectedRegisterTool.Id, 
                              UpdateSourceTrigger=PropertyChanged, 
                              ValidatesOnDataErrors=True}"
                              Margin="10"/>
-                    <TextBox  Width="400" materialDesign:HintAssist.Hint="Nazwa wyposażenia" 
+                    </WrapPanel>
+
+                    <WrapPanel>
+                        <materialDesign:PackIcon Kind="Tools" VerticalAlignment="Center" Width="30" Height="30"/>
+                        <TextBox  Width="250" materialDesign:HintAssist.Hint="Nazwa wyposażenia" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}"  
                              Text="{Binding SelectedRegisterTool.ToolName, 
                              UpdateSourceTrigger=PropertyChanged, 
                              ValidatesOnDataErrors=True}" Margin="10"/>
-                    <TextBox  materialDesign:HintAssist.Hint="Kod UID" Width="400" 
+                    </WrapPanel>
+
+                    <WrapPanel>
+                        <materialDesign:PackIcon Kind="Code" VerticalAlignment="Center" Width="30" Height="30"/>
+                        <TextBox  materialDesign:HintAssist.Hint="Kod UID" Width="250" 
                               materialDesign:HintAssist.HelperText=""  
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
                               Text="{Binding SelectedRegisterTool.UidCode, 
                               UpdateSourceTrigger=PropertyChanged, 
                               ValidatesOnDataErrors=True}" />
-
+                    </WrapPanel>
                 </StackPanel>
 
 
