--- a/Maintenance dashboard.Client/Views/ManagerEmployeeControl.xaml
+++ b/Maintenance dashboard.Client/Views/ManagerEmployeeControl.xaml
@@ -12,7 +12,7 @@
 
         <StackPanel Orientation="Horizontal" Margin="4" Grid.Row="0">
             <RadioButton x:Name="btnOpenAddEmployee" Style="{StaticResource MaterialDesignTabRadioButton}"  Margin="4"  Content="DODAWANIE PRACOWNIKÓW" Checked="btnOpenAddEmployee_Checked" />
-            <RadioButton x:Name="btnOpenEditEmployee" Style="{StaticResource MaterialDesignTabRadioButton}" Margin="4" Content="EDYTOWANIE PRACOWNIKÓW" IsChecked="True" Checked="btnOpenEditEmployee_Checked" Command="{Binding GetEmployeeListCommand}" />
+            <RadioButton x:Name="btnOpenEditEmployee" Style="{StaticResource MaterialDesignTabRadioButton}" Margin="4" Content="EDYTOWANIE PRACOWNIKÓW" IsChecked="True" Checked="btnOpenEditEmployee_Checked"/>
         </StackPanel>
 
         <Grid x:Name="GridPrincipal" Grid.Row="1" Width="750" Height="550"/>
