--- a/Maintenance dashboard.Client/Views/ManagerRegisterToolControl.xaml
+++ b/Maintenance dashboard.Client/Views/ManagerRegisterToolControl.xaml
@@ -12,7 +12,7 @@
 
         <StackPanel Orientation="Horizontal" Margin="4" Grid.Row="0">
             <RadioButton x:Name="btnOpenAddRegisterTool" Style="{StaticResource MaterialDesignTabRadioButton}"  Margin="4"  Content="DODAWANIE WYPOSAŻENIA" Checked="btnOpenAddRegisterTool_Checked" />
-            <RadioButton x:Name="btnOpenEditRegisterTool" Style="{StaticResource MaterialDesignTabRadioButton}" Margin="4" Content="EDYTOWANIE WYPOSAŻENIA" Checked="btnOpenEditRegisterTool_Checked" IsChecked="True" Command="{Binding GetRegisterToolListCommand}" />
+            <RadioButton x:Name="btnOpenEditRegisterTool" Style="{StaticResource MaterialDesignTabRadioButton}" Margin="4" Content="EDYTOWANIE WYPOSAŻENIA" Checked="btnOpenEditRegisterTool_Checked" IsChecked="True"/>
         </StackPanel>
 
         <Grid x:Name="GridPrincipal" Grid.Row="1" Width="750" Height="550"/>
