--- a/Maintenance dashboard.Client/Views/ManagerPaddleControl.xaml
+++ b/Maintenance dashboard.Client/Views/ManagerPaddleControl.xaml
@@ -8,9 +8,7 @@
              TextOptions.TextFormattingMode="Ideal"
              TextOptions.TextRenderingMode="Auto"
              FontFamily="{DynamicResource MaterialDesignFont}"
-             mc:Ignorable="d" 
-             xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels"
-             d:DataContext="{d:DesignInstance viewModels:ManagerPaddleViewModel}">
+             mc:Ignorable="d">
     <Grid >
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
@@ -18,7 +16,7 @@
         </Grid.RowDefinitions>
 
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="4" Grid.Row="0" >
-            <RadioButton x:Name="btnOpenGetPaddle" Style="{StaticResource MaterialDesignTabRadioButton}" DataContext="{Binding EmployeeViewModel}" Command="{Binding ContextInitializationCommand}" Content="PRZYJECIE PALETKI" Checked="btnOpenAcceptancePaddle_Checked" FontSize="12"/>
+            <RadioButton x:Name="btnOpenGetPaddle" Style="{StaticResource MaterialDesignTabRadioButton}" Content="PRZYJECIE PALETKI" Checked="btnOpenAcceptancePaddle_Checked" FontSize="12"/>
             <RadioButton x:Name="btnOpenPutPaddle" Style="{StaticResource MaterialDesignTabRadioButton}"  Content="WYDANIE PALETKI" Checked="btnOpenReleasePaddle_Checked" FontSize="12"/>
             <RadioButton x:Name="btnOpenAddPaddle" Style="{StaticResource MaterialDesignTabRadioButton}" Content="DODANIE NOWYCH PALETEK" Checked="btnOpenAddPaddle_Checked" FontSize="12"/>
             <RadioButton x:Name="btnOpenEditPaddle" Style="{StaticResource MaterialDesignTabRadioButton}" Content="EDYCJA ISTNIEJĄCYCH PALETEK" Checked="btnOpenEditPaddle_Checked" FontSize="12"/>
