--- a/Maintenance dashboard.Client/Views/EditEmployeeControl.xaml
+++ b/Maintenance dashboard.Client/Views/EditEmployeeControl.xaml
@@ -44,8 +44,15 @@
             </Grid.RowDefinitions>
 
 
-            <DataGrid ItemsSource="{Binding Employees}" SelectedItem="{Binding SelectedEmployee}" Height="300"
-                          Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Margin="10" Background="White"/>
+            <DataGrid ItemsSource="{Binding Employees}" SelectedItem="{Binding SelectedEmployee}" Height="300" IsReadOnly="True"
+                          Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Margin="10" Background="White" AutoGenerateColumns="False">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
+                    <DataGridTextColumn Header="Imie" Binding="{Binding FirstName}"/>
+                    <DataGridTextColumn Header="Nazwisko" Binding="{Binding LastName}"/>
+                    <DataGridTextColumn Header="Kod UID" Binding="{Binding UidCode}"/>
+                </DataGrid.Columns>
+            </DataGrid>
 
 
 
