--- a/Maintenance dashboard.Client/Views/CreateAcceptancePaddleControl.xaml
+++ b/Maintenance dashboard.Client/Views/CreateAcceptancePaddleControl.xaml
@@ -1,10 +1,9 @@
-﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.AcceptancePaddle"
+﻿<UserControl x:Class="MaintenanceDashboard.Client.Views.CreateAcceptancePaddle"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
              d:DesignHeight="650" d:DesignWidth="1200"
              xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels"
@@ -30,14 +29,14 @@
             </Rectangle.Effect>
         </Rectangle>
 
-        <Grid  Margin="15,15,15, 15"  x:Name="gridInfoAddToDataBase" Visibility="Hidden" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <!--<Grid  Margin="15,15,15, 15"  x:Name="gridInfoAddToDataBase" Visibility="Hidden" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Grid.RowDefinitions>
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <TextBlock Grid.Row="0" Text="Dodano do bazy danych" Foreground="Gray" Margin="10" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Center"/>
             <materialDesign:PackIcon Grid.Row="1" Kind="DatabaseAdd" VerticalAlignment="Center" Width="100" Height="100" HorizontalAlignment="Center"  Margin="5" Foreground="Gray"/>
-        </Grid>
+        </Grid>-->
 
 
 
@@ -65,7 +64,8 @@
                 <WrapPanel Grid.Column="0" Grid.Row="0">
                     <materialDesign:PackIcon Kind="User" VerticalAlignment="Center" Width="30" Height="30"/>
                     <ComboBox Width="150"  DataContext="{Binding EmployeeViewModel}" materialDesign:HintAssist.Hint="Pracownicy" 
-                           Margin="10" SelectedItem="{Binding SelectedEmployee}" ItemsSource="{Binding Path=Employees}" materialDesign:HintAssist.HelperText="Przyjmujący pracownik">
+                           Margin="10" SelectedItem="{Binding SelectedEmployee}" ItemsSource="{Binding Path=Employees}" 
+                              materialDesign:HintAssist.HelperText="Przyjmujący pracownik">
                         <ComboBox.ItemTemplate >
                             <DataTemplate>
                                 <TextBlock>
@@ -86,14 +86,16 @@
                     <TextBox  Width="300" materialDesign:HintAssist.Hint="Numer paletki" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}"  
                              materialDesign:HintAssist.HelperText="Pole musi być wypełnione"
+                              Text="{Binding PaddleNumber}"
                               Margin="10"/>
+
                 </WrapPanel>
 
                 <WrapPanel Grid.Row="2" Grid.Column="0">
                     <materialDesign:PackIcon Kind="CalendarAdd" VerticalAlignment="Center" Width="30" Height="30"/>
-                    <TextBox  Width="300" materialDesign:HintAssist.Hint="Data dodania" IsEnabled="False" 
-                              Style="{StaticResource MaterialDesignFloatingHintTextBox}"
-                             Text="{Binding Source={x:Static sys:DateTime.Now}, StringFormat='yyyy-MM-dd', Mode=OneWay}" Margin="10"/>
+                    <TextBox  Width="400" materialDesign:HintAssist.Hint="Data dodania" IsEnabled="False"
+                              Style="{StaticResource MaterialDesignFloatingHintTextBox}" Text="{Binding AddedDate}"
+                              Margin="10"/>
                 </WrapPanel>
 
 
@@ -107,24 +109,28 @@
 
 
                 <DatePicker materialDesign:HintAssist.Hint="Data planowanej naprawy"   Margin="10" Style="{StaticResource MaterialDesignOutlinedDatePicker}" 
-                            Grid.Row="4" Grid.Column="0" HorizontalAlignment="Left" Width="220" />
+                            Grid.Row="4" Grid.Column="0" HorizontalAlignment="Left" Width="220" SelectedDate="{Binding RepairDate}" />
 
                 <WrapPanel Grid.Column="0" Grid.Row="5">
                     <materialDesign:PackIcon Kind="ShoppingCartMinus" VerticalAlignment="Center" Width="30" Height="30"/>
                     <ComboBox materialDesign:HintAssist.Hint="Zamówienie" MinWidth="72" Grid.Column="1" Grid.Row="5" 
-                          Margin="10">
+                          Margin="10" SelectedValue="{Binding IsOrder}" SelectedValuePath="Content">
+                        <ComboBoxItem>Tak</ComboBoxItem>
+                        <ComboBoxItem>Nie</ComboBoxItem>
                     </ComboBox>
                 </WrapPanel>
 
                 <WrapPanel Grid.Row="6" Grid.Column="0">
                     <materialDesign:PackIcon Kind="NoteTextOutline" VerticalAlignment="Center" Width="30" Height="30"/>
                     <TextBox  Width="300" materialDesign:HintAssist.Hint="Uwagi" 
-                             Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"/>
+                             Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
+                              Text="{Binding Comments}"/>
                 </WrapPanel>
 
-                <DataGrid ItemsSource="{Binding ReceivedPaddles}"  Margin="10" Grid.Column="1" Grid.Row="0" Grid.RowSpan="7" Background="White" AutoGenerateColumns="False" IsReadOnly="True">
+                <DataGrid ItemsSource="{Binding ReceivedPaddles}"  Margin="10" Height="400" Grid.Column="1" Grid.Row="0" Grid.RowSpan="7" Background="White" AutoGenerateColumns="False" IsReadOnly="True">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Pracownik" Binding="{Binding Employee}"/>
+                        <DataGridTextColumn Header="Numer paletki" Binding="{Binding PaddleNumber}"/>
                         <DataGridTextColumn Header="Data dodania" Binding="{Binding DateAdded}"/>
                         <DataGridTextColumn Header="Akcja" Binding="{Binding PreventiveAction}"/>
                         <DataGridTextColumn Header="Data naprawy" Binding="{Binding PlannedRepairTime}"/>
