--- a/Maintenance dashboard.Client/Views/CreateRegisterToolControl.xaml
+++ b/Maintenance dashboard.Client/Views/CreateRegisterToolControl.xaml
@@ -6,7 +6,8 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d"
              xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels"
-             d:DataContext="{d:DesignInstance viewModels:RegisterToolViewModel}" >
+             d:DataContext="{d:DesignInstance viewModels:RegisterToolViewModel}" 
+             Width="750" Height="550" HorizontalAlignment="Left" VerticalAlignment="Top" >
     <Grid >
         <Grid>
             <Border CornerRadius="20" >
