--- a/Maintenance dashboard.Client/Views/EditPaddleControl.xaml
+++ b/Maintenance dashboard.Client/Views/EditPaddleControl.xaml
@@ -74,7 +74,7 @@
 
                 <WrapPanel>
                     <materialDesign:PackIcon Kind="BarcodeScanner" VerticalAlignment="Center" Width="30" Height="30"/>
-                    <TextBox  materialDesign:HintAssist.Hint="Numer paletki" Width="250"
+                    <TextBox  materialDesign:HintAssist.Hint="Numer paletki" Width="250" IsEnabled="False"
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
                               Text="{Binding SelectedPaddle.Number, 
                               UpdateSourceTrigger=PropertyChanged, 
