--- a/Maintenance dashboard.Client/Views/EditRegisterToolControl.xaml
+++ b/Maintenance dashboard.Client/Views/EditRegisterToolControl.xaml
@@ -7,7 +7,8 @@
              x:Class="MaintenanceDashboard.Client.Views.EditRegisterToolControl"
              mc:Ignorable="d"
              xmlns:viewModels="clr-namespace:MaintenanceDashboard.Client.ViewModels"
-             d:DataContext="{d:DesignInstance viewModels:RegisterToolViewModel}">
+             d:DataContext="{d:DesignInstance viewModels:RegisterToolViewModel}"
+             Width="750" Height="550" HorizontalAlignment="Left" VerticalAlignment="Top" >
     <Grid >
         <materialDesign:TransitioningContent x:Name="TrainsitioningContentSlide" 
                                              OpeningEffect="{materialDesign:TransitionEffect FadeIn}"/>
