--- a/Maintenance dashboard.Client/Views/ManagerPaddleControl.xaml
+++ b/Maintenance dashboard.Client/Views/ManagerPaddleControl.xaml
@@ -20,8 +20,8 @@
             <RadioButton x:Name="btnOpenPutPaddle" Style="{StaticResource MaterialDesignTabRadioButton}"  Content="WYDANIE PALETKI" Checked="btnOpenReleasePaddle_Checked" FontSize="12"/>
             <RadioButton x:Name="btnOpenAddPaddle" Style="{StaticResource MaterialDesignTabRadioButton}" Content="DODANIE NOWYCH PALETEK" Checked="btnOpenAddPaddle_Checked" FontSize="12"/>
             <RadioButton x:Name="btnOpenEditPaddle" Style="{StaticResource MaterialDesignTabRadioButton}" Content="EDYCJA ISTNIEJĄCYCH PALETEK" Checked="btnOpenEditPaddle_Checked" FontSize="12"/>
-            <RadioButton x:Name="btnOpenAddPaddleAction" Style="{StaticResource MaterialDesignTabRadioButton}" Content="DODANIE NOWYCH PREWENCJI" Checked="btnOpenAddPaddleAction_Checked" FontSize="12"/>
-            <RadioButton x:Name="btnOpenEditPaddleAction" Style="{StaticResource MaterialDesignTabRadioButton}" Content="EDYCJA PREWENCJI" Checked="btnOpenEditPaddleAction_Checked" FontSize="12"/>
+            <RadioButton x:Name="btnOpenAddPaddlePrevention" Style="{StaticResource MaterialDesignTabRadioButton}" Content="DODANIE NOWYCH PREWENCJI" Checked="btnOpenAddPaddlePrevention_Checked" FontSize="12"/>
+            <RadioButton x:Name="btnOpenEditPaddlePrevention" Style="{StaticResource MaterialDesignTabRadioButton}" Content="EDYCJA PREWENCJI" Checked="btnOpenEditPaddlePrevention_Checked" FontSize="12"/>
         </StackPanel>
 
         <Grid x:Name="GridPrincipal" Grid.Row="1" Width="1020" Height="750" HorizontalAlignment="Center"/>
