Added ReceivedPaddle data validation
ReceivedPaddleViewModel
-Added and implemented IsValidReceivedPaddle method
ReceivedPaddleContext
-Added CheckReceivedPaddleExist method
CreateAcceptancePaddleControl
-Updated View

--- a/Maintenance dashboard.Client/Views/CreateEmployeeControl.xaml
+++ b/Maintenance dashboard.Client/Views/CreateEmployeeControl.xaml
@@ -36,9 +36,9 @@
             <materialDesign:PackIcon Grid.Row="1" Kind="DatabaseAdd" VerticalAlignment="Center" Width="100" Height="100" HorizontalAlignment="Center"  Margin="5" Foreground="Gray"/>
         </Grid>
 
-        <Grid Margin="15,85,15, 15" Width="700" Height="400">
+        <Grid Margin="15,85,15, 15" Width="700" Height="410">
             <TextBlock Text="DODAWANIE PRACOWNIKÓW" HorizontalAlignment="Center" VerticalAlignment="Top"  
-                           FontSize="18"  Foreground="Gray" Margin="18"/>
+                           FontSize="18"  Foreground="Gray" />
 
             <StackPanel  HorizontalAlignment="Center" Margin="25" VerticalAlignment="Center">
                 <WrapPanel>
