--- a/Maintenance dashboard.Client/Views/CreateAcceptancePaddleControl.xaml
+++ b/Maintenance dashboard.Client/Views/CreateAcceptancePaddleControl.xaml
@@ -60,9 +60,9 @@
 
                 <WrapPanel Grid.Column="0" Grid.Row="0">
                     <materialDesign:PackIcon Kind="User" VerticalAlignment="Center" Width="30" Height="30"/>
-                    <ComboBox Width="150"  DataContext="{Binding EmployeeViewModel}" materialDesign:HintAssist.Hint="Pracownicy" 
+                    <ComboBox Width="180"  DataContext="{Binding EmployeeViewModel}" materialDesign:HintAssist.Hint="Pracownicy" 
                            Margin="10" SelectedItem="{Binding SelectedEmployee}" ItemsSource="{Binding Path=Employees}" 
-                              materialDesign:HintAssist.HelperText="Przyjmujący pracownik">
+                              materialDesign:HintAssist.HelperText="Pole musi być wypełnione">
                         <ComboBox.ItemTemplate >
                             <DataTemplate>
                                 <TextBlock>
@@ -80,17 +80,17 @@
 
                 <WrapPanel Grid.Row="1" Grid.Column="0">
                     <materialDesign:PackIcon Kind="BarcodeScanner" VerticalAlignment="Center" Width="30" Height="30"/>
-                    <TextBox  Width="220" materialDesign:HintAssist.Hint="Numer paletki" 
+                    <TextBox  Width="180" materialDesign:HintAssist.Hint="Numer paletki" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}"  
                              materialDesign:HintAssist.HelperText="Pole musi być wypełnione"
-                              Text="{Binding PaddleNumber}"
+                              Text="{Binding Number, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                               Margin="10"/>
 
                 </WrapPanel>
 
                 <WrapPanel Grid.Row="2" Grid.Column="0">
                     <materialDesign:PackIcon Kind="CalendarAdd" VerticalAlignment="Center" Width="30" Height="30"/>
-                    <TextBox  Width="220" materialDesign:HintAssist.Hint="Data dodania" IsEnabled="False"
+                    <TextBox  Width="180" materialDesign:HintAssist.Hint="Data dodania" IsEnabled="False"
                               Style="{StaticResource MaterialDesignFloatingHintTextBox}" Text="{Binding AddedDate}"
                               Margin="10"/>
                 </WrapPanel>
@@ -99,19 +99,20 @@
                 <WrapPanel Grid.Column="0" Grid.Row="3">
                     <materialDesign:PackIcon Kind="LightningBoltOutline" VerticalAlignment="Center" Width="30" Height="30"/>
                     <ComboBox materialDesign:HintAssist.Hint="Akcja" MinWidth="72" Grid.Column="0" Grid.Row="3" 
-                          Margin="10" Width="150" HorizontalAlignment="Left"
+                          Margin="10" Width="180" HorizontalAlignment="Left"
                               materialDesign:HintAssist.HelperText="Wykonywane czynnosci">
                     </ComboBox>
                 </WrapPanel>
 
 
                 <DatePicker materialDesign:HintAssist.Hint="Data planowanej naprawy"   Margin="10" Style="{StaticResource MaterialDesignOutlinedDatePicker}" 
-                            Grid.Row="4" Grid.Column="0" HorizontalAlignment="Left" Width="220" SelectedDate="{Binding RepairDate}" />
+                            Grid.Row="4" Grid.Column="0"  Width="200" SelectedDate="{Binding RepairDate}" HorizontalAlignment="Center" />
 
                 <WrapPanel Grid.Column="0" Grid.Row="5">
                     <materialDesign:PackIcon Kind="ShoppingCartMinus" VerticalAlignment="Center" Width="30" Height="30"/>
-                    <ComboBox materialDesign:HintAssist.Hint="Zamówienie" MinWidth="72" Grid.Column="1" Grid.Row="5" 
-                          Margin="10" SelectedValue="{Binding IsOrder}" SelectedValuePath="Content">
+                    <ComboBox materialDesign:HintAssist.Hint="Zamówienie" MinWidth="180" Grid.Column="1" Grid.Row="5" 
+                          Margin="10" SelectedValue="{Binding IsOrder}" SelectedValuePath="Content"
+                               materialDesign:HintAssist.HelperText="Pole musi być wypełnione">
                         <ComboBoxItem>Tak</ComboBoxItem>
                         <ComboBoxItem>Nie</ComboBoxItem>
                     </ComboBox>
@@ -119,7 +120,7 @@
 
                 <WrapPanel Grid.Row="6" Grid.Column="0">
                     <materialDesign:PackIcon Kind="NoteTextOutline" VerticalAlignment="Center" Width="30" Height="30"/>
-                    <TextBox  Width="220" materialDesign:HintAssist.Hint="Uwagi" 
+                    <TextBox  Width="180" materialDesign:HintAssist.Hint="Uwagi" 
                              Style="{StaticResource MaterialDesignFloatingHintTextBox}" Margin="10"
                               Text="{Binding Comments}"/>
                 </WrapPanel>
